# mpi4jax

./: .flake8  .gitattributes  .gitignore  .latest_jax_version.txt  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  Dockerfile  LICENSE.md  MANIFEST.in  README.md  README.rst  demo.py  docker-compose.yml  hotpotato.py  latest_jax_version.txt  latext_jax_version.txt  paper.bib  paper.md  pyproject.toml  setup.cfg  setup.py  versioneer.py
.buildkite/: pipeline.yml  template.yml
.github/: dependabot.yml
.github/workflows/: build-cuda-ext.yml  build-docs.yml  build-gpu-ext.yml  build-xpu-ext.yml  coin-flip.yml  covecov-coverage.yml  joss-compile.yml  mpi-tests.yml  mpi_tests.yml  pre-commit.yml  python-publish.yml
conf/: install-cuda-ubuntu.sh  install-rocm-ubuntu.sh  travis-install-mpi.sh
docs/: api.rst  conf.py  demo-py.rst  demo.rst  developers.rst  environment.yml  gpu.rst  index.rst  installation.rst  quickstart.rst  shallow-water-source.rst  shallow-water.rst  sharp-bits.rst  tokens.rst  usage.rst
docs/_static/: demo.py
examples/: shallow_water.py
mpi4jax/: __init__.py  _create_token.py  _deprecations.py  _version.py  flush.py  notoken.py  token.py  utils.py  validation.py  warn.py
mpi4jax/_src/: __init__.py  _latest_jax_version.txt  comm.py  decorators.py  flush.py  jax_compat.py  layout_helper.py  token_context.py  tokenizer.py  utils.py
mpi4jax/collective_ops/: allgather.py  allreduce.py  alltoall.py  bcast.py  gather.py  recv.py  reduce.py  scan.py  scatter.py  send.py  sendrecv.py
mpi4jax/cython/: __init__.py  cuda_runtime_api.pxd  mpi_xla_bridge.pxd  mpi_xla_bridge.pyx  mpi_xla_bridge_cpu.pyx  mpi_xla_bridge_gpu.pyx
mpi4jax/experimental/: __init__.py  register_overrides.py  tokenizer.py
test/: test.py
tests/: conftest.py  test.py  test_allreduce_matvec.py  test_auto_tokenize.py  test_collective_ops.py  test_decorators.py  test_demo.py  test_deprecations.py  test_examples.py  test_flush.py  test_has_cuda.py  test_has_hip.py  test_has_sycl.py  test_invalid_jaxlib.py  test_jax_compat.py  test_jax_transforms.py  test_mpi4jax.py  test_prefer_notoken.py  test_token_context.py  test_validation.py
tests/collective_ops/: test_allgather.py  test_allreduce.py  test_allreduce_matvec.py  (+10 more)
(+72 files in other folders)
