[tool.setuptools_scm]
write_to = "mpi4jax/_version.py"


[tool.coverage.run]
branch = true
parallel = true
command_line = "-m pytest tests/"
source = ["mpi4jax"]


[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


# Requirements
[dependencies]
Click = "^7.0"
numpy = ">=1.16"
jax = ">=0.1.40"
jaxlib = ">=0.1.55"
mpi4py = ">=3.0.1"

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }
pre-commit = ">= 2.7"
pytest = ">= 5"

[build-system]
requires = [
  "setuptools>=18.0",
  "wheel",
  "cython>=0.21",
  "mpi4py>=3.0.1",
  "setuptools_scm[toml]>=3.4",
]
build-backend = "setuptools.build_meta"
