[tool.pytest.ini_options]
testpaths = [
    "tests",
]


[tool.coverage.run]
branch = true
parallel = true
command_line = "-m pytest tests/"
source = ["mpi4jax"]
omit = [
  "mpi4jax/_version.py",
]


[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | versioneer\.py
  | mpi4jax/_version\.py
)
'''


# Build requirements
# (for runtime requirements see setup.py)

[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "cython>=0.21",
  "mpi4py>=3.0.1",
]
build-backend = "setuptools.build_meta"
